# poker-pro-track

./: package-lock.json  package.json
python/: requirements.txt
python/src/core/: ocr_engine.py
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/permissions/: app.manifest.json
src-tauri/python/: requirements.txt
src-tauri/python/src/core/: __init__.py
src-tauri/src/: api.rs  auth.rs  error.rs  main.rs  ocr_bridge.rs  python_setup.rs  right_click_detector.rs  settings.rs  window_manager.rs
src/components/mesas/: MesasDetectadas.jsx  MesasToolbar.jsx  ProfileDetector.jsx
src/components/ui/: SectionHeader.jsx
src/context/: AuthContext.jsx
src/hooks/: useMesas.js
src/pages/: Configuracion.jsx  Dashboard.jsx  Historial.jsx  LoginPage.jsx  Mesas.jsx  MesasPage.jsx
src/services/: auth.js  profile-detector.js  tauri.js
