[package]
name = "poker-pro-track"
version = "0.1.0"
description = "Una aplicación para análisis de jugadores de póker"
authors = ["Tu Nombre"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "clipboard-write-text", "clipboard-read-text", "dialog-open", "dialog-save", "window-maximize", "window-unmaximize", "window-minimize", "window-unminimize", "window-start-dragging", "window-close", "window-hide", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
regex = "1.7"
urlencoding = "2.1"
thiserror = "1.0"
once_cell = "1.8"

# Dependencias para Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
